[tool.poetry]
name = "my_playbook_repo"
version = "0.0.1"
description = ""
authors = ["USER NAME <musaelyanvlad@gmail.com>"]

[tool.poetry.dependencies]
some-dependency = "^1.2.3"

[tool.poetry.dev-dependencies]
robusta-cli = "^0.8.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
